# hue

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  Makefile  NOTES.md  README.md  example.hue  example.s  hue.cabal  mkfile
app/: Main.hs
compiler/: ast.h  bytecode.c  bytecode.h  lexer.c  lexer.h  main.c  object.h  parser.c  parser.h
examples/: cave-simulator.hue  fibonacci.hue  hello-world.hue
lib/: ast.c  bytecode.c  bytecode.h  object.c
pages/: index.html
src/: Hue.hs  collect_strings.rs  hc.c  htok.c  lowerer.rs  main.rs  parser.rs  regalloc.rs
src/Hue/: Either.hs  Lowering.hs  Parser.hs  Typechecker.hs
src/types/: ast.rs  binop.rs  ctx.rs  error.rs  func.rs  inst.rs  mod.rs  reg.rs  vreg.rs
test/: Main.hs
vm/: main.c
