cabal-version:   3.0
name:            hue
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      mustafa.bugra.yildiz@icloud.com
author:          mustafa-bugra-yildiz
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Hue
        Hue.Parser
        Hue.Typechecker

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.1

executable hue
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        hue

test-suite hue-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        hue,
        hspec
